--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,114 +1,168 @@
-*{
-    margin: 0;
-    padding: 0;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.body {
-   display: grid;
+html, body {
+ margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* <- evita scroll horizontal */
+  box-sizing: border-box;
+}
+
+.layout {
+  min-height: 100dvh;
+  display: grid;
   grid-template-areas:
+    "sidebar"
     "header"
     "main"
-    "sidebar"
     "footer";
   grid-template-columns: 1fr;
-  min-height: 100vh;
-  background-color: rgb(192, 183, 183);
+  grid-template-rows: auto auto 1fr auto;
+  background-color: rgb(255, 147, 147);
 }
 
 .header {
-grid-area: header;
-} 
-
-.navbar {
-    display: flex;
-    justify-content: left;
-    background-color: rgb(255, 60, 60);
-    color: aliceblue;
+  grid-area: header;
+  padding: 10px;
 }
 
-.navbar_tittle {
-    display: flex;
-    justify-content: left;
-    align-items: center;
+header p {
+  font-size: large;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
-.navbar_tittle p {
-    padding: 20px;
+.search {
+  padding-bottom: 1px;
+  background: #fff;
+  border-radius: 3px;
 }
 
-.nav_img {
-height: 50px;
+.search label {
+  padding-left: 1.5em;
+  font-size: small;
+  color: #42494981;
 }
 
-.nav_img img {
-}
-
-.btn_icon {
-display: flex;
-justify-content: right;
-
-}
-
-.btn_i {  
+.search select {
+  width: 90%;
+  border: none;
 }
 
 .sidebar {
-    grid-area: sidebar;
-display: flex;
-flex-direction: column;
-align-items: center;
-padding: 20px 10px;
+  grid-area: sidebar;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color:  rgb(243, 28, 28);
 }
 
-.container {
-display: flex;
-flex-direction: column;
-gap: 20px;
+.logo {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 1, "wght" 700, "GRAD" 200, "opsz" 48;
+  color: #fff;
+  font-size: 2em;
+}
+
+.nav_img {
+  height: 50px;
+}
+
+.navegador {
+  display: none;
+}
+
+.menu {
+  padding-right: 2.5em;
+}
+
+.nav_links {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  top: 60px;
+  right: 0;
+  background-color: #424949;
+  display: grid;
+  place-items: center;
+  clip-path: circle(0% at top right);
+  transition: clip-path 0.4s;
+  z-index: -1;
+}
+
+.nav_link {
+  text-decoration: none;
+  color: aliceblue;
+}
+
+.nav_links:target {
+  clip-path: circle(150% at top right);
+  z-index: 1;
+}
+
+.close-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  color: white;
+  font-size: 1.5rem;
+  text-decoration: none;
 }
 
 .main {
-     grid-area: main;
-    padding: 20px;
-    display: grid;
-    gap: 20px;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: 500px;
+  grid-area: main;
+  padding: 20px;
+   padding-bottom: 80px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr; /* UNA columna para mobile */
+  gap: 20px;
+  padding: 10px;
+  max-width: 100%;
 }
 
 .card {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    overflow: hidden;
-    position: relative;
-    background-color: aliceblue;
-    object-fit: cover;
-    box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgba(128, 128, 128, 0.247);
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: white;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
 }
 
-.card_img{
-height: 51%;
+.card_img {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card_img img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .card_text {
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding-top: 52px;
-      color: #555;
+  padding: 15px;
+  text-align: center;
+  color: #555;
 }
 
 h3 span {
@@ -117,42 +171,278 @@ h3 span {
 }
 
 .card_btn {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.btn {
-   width: 350px;
-  padding: 20px;
-  background-color: rgb(197, 26, 197);
-  color: aliceblue; 
-   border: none;
-  outline: none;
-   cursor: pointer; 
-     font-family: 'Georgia', serif;
-font-size: medium;
-margin-top: 40px;
+.btn_car {
+  background-color: rgb(243, 28, 28);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.btn_car:hover {
+  background-color: rgb(200, 20, 20);
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 5px;
+}
+
+.pag_button {
+    gap: 10px;
+}
+
+.pag_button button {
+    padding: 10px;
+    background-color:  rgb(200, 20, 20);
+    color: aliceblue;
 }
 
 .footer {
-    grid-area: footer;
+   position: fixed;  
+  bottom: 0;         
+  left: 0;           
+  width: 100%;      
+  height: 60px;     
+  background-color: #f1f1f1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  z-index: 10;
+  border: none;  
+  outline: none; 
 }
 
+.btn_footer {
+  display: flex;
+  gap: 10px;
+  border: none;  
+  outline: none; 
+  padding: 0; 
+}
 
+.footer .btn_footer i {
+  font-size: 1.5rem; 
+  color: #333; 
+}
 
+.footer_tittle {
+  display: flex;
+  align-items: center;
+}
 
-
-@media (min-width: 768px) {
-  .body {
+/* Pantalla para tablets */
+@media (min-width: 576px) {
+  .layout {
+    display: grid;
     grid-template-areas:
-      "header header header header"
-      "sidebar main main main"
-      "footer footer footer footer";
-    grid-template-columns: 150px 1fr;
-    grid-template-rows: 300px 1fr 100px;
+      "sidebar header"
+      "sidebar main"
+      "footer main";
+    grid-template-columns: 1fr 11fr;
+    grid-template-rows: auto 1fr auto;
+  }
+
+ .search {
+  width: 100%;
+  max-width: 1000px; 
+  margin-left: 70px;
+  box-sizing: border-box;
+}
+
+  .sidebar {
+     display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  background-color: rgb(241, 19, 19);
+  padding: 20px;
+  }
+
+  .main {
+    padding: 20px;
+    height: auto;
+    width: 100%;
+  }
+
+  .container {
+    display: grid;
+ grid-template-columns: repeat(2, 1fr);    
+    gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    overflow: hidden; 
+  }
+
+  .menu span {
+    display: none;
+  }
+
+ .logo {
+  display: flex;
+  flex-direction: row; 
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  width: 100%;
+}
+
+.container_logo {
+  width: auto;
+}
+
+.logo_tittle {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.navegador {
+  width: 100%;
+  margin-top: 1rem;
+  overflow-x: hidden;
+  min-height: 150px; 
+  display: block;
+}
+
+.navegador ul {
+     display: flex;
+  flex-direction: column; 
+  gap: 10px;               
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  align-items: center;     
+  width: 100%; 
+}     
+
+.footer {
+ height: 10vh;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  height: 60px; 
+  z-index: 10; 
+}
+}
+
+/* Pantallas más grandes */
+@media (min-width: 992px) {
+  .layout {
+    height: 100vh;
+    display: grid;
+    grid-template-areas:
+      "sidebar header"
+      "sidebar main"
+      "footer footer";
+     grid-template-columns: 250px 1fr; 
+    grid-template-rows: auto 1fr auto;
+  }
+
+  .header {
+    height: 10vh;
+    width: auto;
+  }
+  
+.search {
+  width: 100%;
+  max-width: 1000px; 
+  margin-left: 70px;
+  box-sizing: border-box;
+}
+
+  .sidebar {
+    width: 200px;
+     display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  background-color: rgb(241, 19, 19);
+  padding: 10px;
+  }
+
+  .main {
+    padding: 20px;
+    height: auto;
+    width: 100%; 
+     padding-bottom: 80px;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    overflow: hidden; 
+  }
+
+  .menu span {
+    display: none;
+  }
+
+ .logo {
+  display: flex;
+  flex-direction: row; 
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  width: 100%;
+}
+
+.container_logo {
+  width: auto;
+}
+
+.logo_tittle {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.navegador {
+  width: 100%;
+  margin-top: 1rem;
+  overflow-x: hidden;
+  min-height: 150px; 
+  display: block;
+}
+
+.navegador ul {
+     display: flex;
+  flex-direction: column; 
+  gap: 40px;               
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  align-items: center;     
+  width: 100%; 
+}     
+
+  .footer {
+    position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  height: 60px;  /* Ajusta la altura según lo necesites */
+  z-index: 10; 
+    
   }
 }
