--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,7 @@ header p {
 }
 
 .card {
+    width: 100%;
   display: flex;
   flex-direction: column;
   border: 1px solid rgba(128, 128, 128, 0.247);
@@ -142,21 +143,20 @@ header p {
   background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+   max-width: 300px;
 }
 
 .card_img {
-  width: 100%;
-  height: 200px;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+ width: 100%;
+  height: 200px;         
+  display: block;
 }
 
 .card_img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+
 }
 
 .card_text {
