--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 html, body {
  margin: 0;
   padding: 0;
-  overflow-x: hidden; /* <- evita scroll horizontal */
+  overflow-x: hidden; 
   box-sizing: border-box;
 }
 
@@ -127,7 +127,7 @@ header p {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr; /* UNA columna para mobile */
+  grid-template-columns: 1fr; 
   gap: 20px;
   padding: 10px;
   max-width: 100%;
